fix validation in addDrinkCommand